# rs_launcher

./: .gitignore  Cargo.toml  build-plugins.bat  build-plugins.sh  build.rs  package-lock.json  package.json  tauri.conf.json
.claude/: settings.local.json
capabilities/: default.json
docs/: plan-dynamic-plugin-system.md  plan-everything-plugin.md  plan-plugin-list-items.md  plan-plugin-system.md  plan-search-bar-enhancements.md  spec-dynamic-plugin-system.md  spec-everything-plugin.md  spec-plugin-iframe.md  spec-plugin-list-items.md  spec-plugin-system.md  spec-search-bar-enhancements.md  tasks-everything-plugin.md
plugins/everything_search/: Cargo.toml  plugin.json
plugins/everything_search/renderer/: app.js  index.css  index.html  main.ts  main.vue  package-lock.json  package.json  rs-sdk.d.ts  style.css  tsconfig.json  vite.config.ts  vue-shim.ts
plugins/everything_search/src/: lib.rs
plugins/hello_plugin/: plugin.json
plugins/hello_plugin/renderer/: app.js  index.html  package.json  style.css
plugins/hello_plugin/src/: lib.rs
src/: app.rs  config.rs  hotkey.rs  icon.rs  lib.rs  main.rs  message.rs  rs_asset.rs  search_input.rs  subscription.rs  tray.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: icon.rs  lib.rs  main.rs
src-tauri/src/plugins/: app_search.rs
src-tauri/src/search/: mod.rs
src-ui/: index.html  main.js  package-lock.json  package.json  styles.css  tsconfig.node.tsbuildinfo  vite.config.ts
src-ui/src/: App.vue  main.ts
src-ui/src/components/: HintBar.vue  PluginRenderer.vue  ResultItem.vue  ResultList.vue  SearchBar.vue  SettingsModal.vue
src-ui/src/composables/: usePlugin.ts  usePluginComponents.ts  usePluginIframe.ts  useSearch.ts  useTauri.ts  useTheme.ts  useWindow.ts
src-ui/src/plugins/everything_search/: plugin.json
src-ui/src/plugins/everything_search/renderer/: app.js  index.html  package.json  tsconfig.json
src-ui/src/plugins/hello_plugin/: Cargo.toml  plugin.json
src-ui/src/plugins/hello_plugin/renderer/: index.html  main.ts  package-lock.json  style.css  vite.config.ts  vue-shim.ts
src-ui/src/plugins/hello_plugin/src/: lib.rs
src-ui/src/router/: index.ts
src-ui/src/sdk/: rs-sdk.d.ts  rs-sdk.js
src-ui/src/styles/: main.css
src-ui/src/types/: index.ts
src-ui/src/views/: MainView.vue  SettingsView.vue
src/plugin/: engine.rs  loader.rs  manifest.rs  mod.rs  registry.rs
src/plugins/: app_search.rs  mod.rs
src/search/: fuzzy.rs  pinyin.rs
src/theme/: mod.rs
themes/dark/: theme.json
themes/light/: theme.json
ui/: launcher.slint
