[package]
name = "rs_launcher"
version = "0.2.0"
edition = "2021"

[lib]
name = "rs_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pinyin = "0.11"
png = "0.17"
seahash = "4.1"
base64 = "0.22"
http = "1"
percent-encoding = "2"
mime_guess = "2"
dirs = "6"
libloading = "0.8"
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_Input_KeyboardAndMouse",
] }

