[package]
name = "everything_search"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"
everything-ipc = "0.1"
windows-sys = { version = "0.59", features = ["Win32_UI_Shell_Common", "Win32_UI_WindowsAndMessaging", "Win32_Storage_FileSystem", "Win32_Graphics_Gdi", "Win32_System_Com", "Win32_Foundation"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
once_cell = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
